--- a/public/src/sass/layout/_sobreNosotros.scss
+++ b/public/src/sass/layout/_sobreNosotros.scss
@@ -1,45 +1,52 @@
-.imagen-fondo {
-    .titulo {
-        margin-top: 10%;
-        background-color: #321c3d;
-        height: 100px;
-    }
-}
-
 #sobreNosotros {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    
+
     h1 {
-        color:#D96704;
-            font-size: 40px;
+        color: #D96704;
+        font-size: 40px;
     }
 
     .caja {
-        // margin: 100px;
+        margin-bottom: 50px;
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        
+        width: 100%;
+
         .texto {
             width: 50%;
             padding: 20px;
+
             p {
+                margin-bottom: 50px;
                 line-height: 1.5
             }
         }
-       .imagen {
-        width: 50%;
-        padding: 20px;
 
-        img {
-            width: 100%;
+        .imagen {
+            width: 500px;
+            padding: 20px;
+
+            img {
+                width: 100%;
+            }
         }
-       }
-       
+
+        &:nth-child(3) {
+            text-align: center;
+            
+            blockquote {
+                width: 78%;
+                border-top: 3px solid #D96704;
+                border-bottom: 3px solid #D96704;
+
+                padding: 50px;
+            }
+        }
     }
 }
