--- a/public/src/sass/estilo.css
+++ b/public/src/sass/estilo.css
@@ -876,4 +876,59 @@ h1 {
   line-height: 1.7rem;
   margin: 1rem 0;
   text-align: justify;
+}
+
+#verUsuario {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+}
+#verUsuario .caja {
+  width: 50%;
+  margin: auto;
+  background-color: rgb(243, 240, 240);
+  box-shadow: 0 4px 14px hsla(355, 25%, 15%, 0.1);
+  border-radius: 0.5rem;
+}
+#verUsuario .caja #imagenVerUsuario {
+  width: 200px;
+}
+#verUsuario .caja #imagenVerUsuario img {
+  border-radius: 50%;
+  width: 100%;
+}
+#verUsuario .caja #datos {
+  border-radius: 20px;
+  padding: 20px;
+  background-color: #fff;
+}
+#verUsuario .caja #datos span {
+  font-weight: bold;
+}
+#verUsuario .caja #datos li {
+  padding: 5px;
+}
+#verUsuario .caja #botones {
+  margin: 20px;
+}
+#verUsuario .caja #botones a {
+  background-color: red;
+  color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+}
+#verUsuario .caja #botones a:nth-child(2) {
+  background-color: green;
+}
+#verUsuario .caja:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#verUsuario .caja:nth-child(2) {
+  width: 100%;
+  margin: 10px;
+  padding: 50px;
 }/*# sourceMappingURL=estilo.css.map */
