--- a/public/src/sass/estilo.scss
+++ b/public/src/sass/estilo.scss
@@ -11,12 +11,12 @@
 
 @import "layout/formularioLogin";
 @import "layout/formularioContacto";
-@import "layout/formularioUsuario";
+@import "layout/formularios";
 @import "layout/crud";
-@import "layout/crear";
 @import "layout/sobreNosotros";
 @import "layout/nav-blog";
 @import "layout/verUsuario";
+@import "layout/botones";
 
 
 
