--- a/public/src/sass/layout/_main.scss
+++ b/public/src/sass/layout/_main.scss
@@ -12,6 +12,9 @@ main {
     .main-contenido {
         margin: 70px;
 
+        h1 {
+            color:#D96704;
+        }
            // MEDIA QUERIE MAIN
         //    @include movil-max(movil-max) {
         //     height: 1000px;  
