--- a/public/src/sass/layout/_header.scss
+++ b/public/src/sass/layout/_header.scss
@@ -1,7 +1,6 @@
 /*MAIN DE RESTO DE PÁGINAS
 * .inicio es el div de la pagina principal
 */
-
 .inicio {
     height: 100vh;
     background-image: linear-gradient(rgba(50, 28, 61, 1), rgba(0, 0, 0, 0.70)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoInicio.jpg);
@@ -18,9 +17,10 @@
 
     }
 
-    @include ordenador-max(tablet-min, portatil-L)  {
+    @include ordenador-max(tablet-min, portatil-L) {
         height: 100vh;
     }
+
     // @include ordenador-4k(ordenador-4k) {
     //     // height: 70vh;
     // }
@@ -94,58 +94,26 @@
 
 
 
-/*MAIN DE RESTO DE PÁGINAS*/
+/*HEADER DE RESTO DE PÁGINAS*/
 
 @mixin secundario {
-     margin-top: 0px;
-     z-index: -1000;
-    // background-position: bottom;
-    // background-size: cover;
-    // background-repeat: no-repeat;
-    // width: 100%;
-    // display: flex;
-    // // background-attachment: fixed;
-    // background-position: center;
-    // // justify-content: flex-end;
-    // // align-items: center;
-
+    margin-top: 0px;
+    z-index: -1000;
     text-align: center;
-	width: 100%;
-	height: 500px;
-	background-size: cover;
+    width: 100%;
+    height: 500px;
+    background-size: cover;
     background-repeat: no-repeat;
-	background-attachment: fixed;
-	position: relative;
-	overflow: hidden;
-	border-radius: 0 0 85% 85% / 30%;
+    background-attachment: fixed;
+    position: relative;
+    overflow: hidden;
+    border-radius: 0 0 85% 85% / 30%;
+    @include movil-max(movil-max) {
+        height: 300px;
+    }
     
-    // @include ordenador-4k(ordenador-4k) {
-    //     height: 500px;
-    // }
 
-    // .titulo {
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-    //     flex-direction: column;
-
-    //     h1 {
-    //         font-size: $letraTitulo;
-    //         letter-spacing: $espaciadoH1;
-    //         padding: 10px;
-    //         font-style: italic;
-    //         color: $blanco;
-    //         text-transform: uppercase;
-    //         word-spacing: 0.25em;
-    //     }
-
-    //     p {
-    //         color: $blanco;
-    //         letter-spacing: $espaciadoPA;
-    //     }
-    // }
-
-    .overlay{
+    .overlay {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -155,19 +123,25 @@
         color: #FFF;
         text-shadow: 1px 1px 1px #333;
         background-image: linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40));
-        
+
         h1 {
-            font-size: 80px;
-	        margin-bottom: 30px;
+            font-size: 60px;
+            margin-bottom: 30px;
+            @include movil-max(movil-max) {
+                font-size: 30px;
+            }
+        
         }
 
-        h3,p{
+        h3,
+        p {
             margin-bottom: 30px;
         }
     }
 
 }
 
+// IMAGENES PARA CADA PAGAINA DEL MENÚ DE NAVEGACION
 .header-secundario-sobreNosotros {
     background-image: linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoSobreNosotros.jpg);
     @include secundario();
@@ -177,6 +151,7 @@
     background-image: linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40)), url(http://localhost/PROYECTO_ZESARI/public/src/img/fondoSobreNosotros.jpg);
     @include secundario();
 }
+
 // /*HEADERS NAVEGACION*/
 // .nav-clases {
 //     background-image: linear-gradient(rgba(50, 28, 61, 0.40), rgba(0, 0, 0, 0.40)), url(http://localhost/PROYECTO_ZESARI-main/public/src/img/fondoClases.jpg);
@@ -225,4 +200,32 @@
     // }
     @include secundario();
 
+}
+
+
+/*HEADER DEL SUBMENU*/
+.header-submenu {
+    z-index: -1000;
+    text-align: center;
+    width: 100%;
+    height: 300px;
+    background: rgb(50, 28, 61);
+    background: radial-gradient(circle, rgba(50, 28, 61, 1) 50%, rgba(132, 119, 140, 1) 80%, rgba(217, 103, 4, 1) 120%);
+
+    .overlay {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        color: #FFF;
+        text-shadow: 1px 1px 1px #333;
+
+        h1 {
+            font-size: 50px;
+            margin-top: 30px;
+
+        }
+
+    }
 }
