--- a/public/src/sass/layout/_nav-blog.scss
+++ b/public/src/sass/layout/_nav-blog.scss
@@ -1,28 +1,33 @@
-.blogs, .clases {
+.blogs, .clases, .equipo {
     display: grid;
     padding: 10px;
     grid-template-columns: 1fr 1fr 1fr;
+
+    @include movil-max(movil-max) {
+        grid-template-columns: 1fr;
+    }
+
+    @include ordenador-max(tablet-min, portatil-L) {
+        grid-template-columns: 1fr 1fr;
+
+    }
 
     .caja {
         width: 350px;
         height: 490px;
         margin: 20px;
-        // overflow: hidden;
-        // background-color: $blanco;
-        // cursor: default;
-        // border: 1px solid #321c3d;
         padding: 15px;
         background-color: rgb(243, 240, 240);
         box-shadow: 0 4px 14px hsl(355deg 25% 15% / 10%);
         border-radius: 0.5rem;
 
-            img {
-                width: 100%;
-                height: 200px;
-                object-fit: cover;
-                object-position: center;
-                border-radius: 0.5rem;
-            }
+        img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            object-position: center;
+            border-radius: 0.5rem;
+        }
       
         .contenido {
             text-align: center;
@@ -36,14 +41,20 @@
             //     padding-bottom: 20px;
             // }
 
-           
+           .post-redes {
+                a {
+                    padding: 10px;
+                    font-size: 30px;
+                    color: #000000;
+
+                    &:hover {
+                        color: #636262;
+                    }
+                }
+
+           }
             
-            //     a {
-            //         // background-color: #D96704;
-            //         border-radius: 10px;
-            //         padding: 10px;
-            //         color: #000000;
-            //     }
+                
             
             .post-title {
                 font-size: 1.3rem;
@@ -113,7 +124,7 @@
     display: flex;
     align-items: center;
     a, span {
-        font-size: 30px;
+        font-size: 20px;
         padding: 10px;
         color: #000000;
     }
@@ -175,3 +186,5 @@
     margin: 1rem 0;
     text-align: justify;
 }
+
+
