--- a/public/src/sass/layout/_verUsuario.scss
+++ b/public/src/sass/layout/_verUsuario.scss
@@ -2,68 +2,56 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-
     width: 100%;
+    @include movil-max(movil-max) {
+        flex-direction: column;
+    }
+
+    @include ordenador-max(tablet-min, nav-menu) {
+        flex-direction: column;
+    }
     .caja {
-       
-        width: 50%;
-       // border-radius: 20px;
-        margin:auto;
+        width: 100%;
+        margin: auto;
         background-color: rgb(243, 240, 240);
         box-shadow: 0 4px 14px hsl(355deg 25% 15% / 10%);
         border-radius: 0.5rem;
-        #imagenVerUsuario{
+
+        #imagenVerUsuario {
             width: 200px;
+
             img {
                 border-radius: 50%;
                 width: 100%;
             }
         }
 
-        #datos{
-            // border: 1px solid black;
+        #datos {
             border-radius: 20px;
             padding: 20px;
             background-color: #fff;
+
             span {
                 font-weight: bold;
             }
-            li{
+
+            li {
                 padding: 5px;
             }
-           
-        }
 
-        #botones{
-            margin: 20px;
-            a {
-                background-color: red;
-                color: #fff;
-                padding: 10px;
-                border-radius: 10px;
-                
-                &:nth-child(2){
-                    background-color: green;
-                }
-            }
-
-           
         }
-        
 
         &:nth-child(1) {
-            
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
         }
+
         &:nth-child(2) {
             width: 100%;
             margin: 10px;
             padding: 50px;
         }
     }
-
-       
-    }
+}
